added basic styling

--- a/src/styles/settings/variables.scss
+++ b/src/styles/settings/variables.scss
@@ -1,7 +1,7 @@
 :root {
-  --color-default-400: #0855cccc;
-  --color-default-500: #0855cce8;
-  --color-default-600: #0855cc;
+  --color-default-400: #0962ff;
+  --color-default-500: #0032e6;
+  --color-default-600: #000b66;
 
   --color-success-400: #068a23cc;
   --color-success-500: #068a22e8;
@@ -49,4 +49,5 @@
 
   --border: 1px solid;
   --radius: 3px;
+  --header-height: 115px;
 }
