--- a/src/components/Card/Card.scss
+++ b/src/components/Card/Card.scss
@@ -11,9 +11,9 @@ $cardSizes: (
 );
 
 $cardShadows: (
-  sm: (0 0 0 1px rgba(16,22,26,.1), 0 0 0 rgba(16,22,26,0), 0 1px 1px rgba(16,22,26,.2)),
-  md: (0 0 0 1px rgba(16,22,26,.1), 0 1px 1px rgba(16,22,26,.2), 0 2px 6px rgba(16,22,26,.2)),
-  lg: (0 0 0 1px rgba(16,22,26,.1), 0 2px 4px rgba(16,22,26,.2), 0 8px 24px rgba(16,22,26,.2))
+  sm: (0px 1px 5px 0px rgba(0,0,0,0.2), 0px 0px 0px 0px rgba(0,0,0,0.14), 0px 1px 0px -2px rgba(0,0,0,0.12)),
+  md: (0px 1px 5px 0px rgba(0,0,0,0.2), 0px 2px 2px 0px rgba(0,0,0,0.14), 0px 3px 1px -2px rgba(0,0,0,0.12)),
+  lg: (0px 1px 5px 0px rgba(0,0,0,0.2), 0px 2px 4px 0px rgba(0,0,0,0.14), 0px 6px 2px -2px rgba(0,0,0,0.12))
 );
 
 /*=============================================
