--- a/src/components/Grid/Grid.scss
+++ b/src/components/Grid/Grid.scss
@@ -16,7 +16,7 @@ $cols: 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12;
   grid-auto-flow: row;
   grid-auto-rows: minmax(20px, auto);
   grid-template-columns: repeat(12, 1fr);
-  grid-gap: var(--spacing-3);
+  grid-gap: var(--spacing-4);
 
   & + .c-row {
     margin-top: var(--spacing-2); 
@@ -44,5 +44,16 @@ $cols: 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12;
 @each $col in $cols {
   .c-col-#{$col} {
     grid-column-end: span #{$col};
+  }
+}
+
+@media screen and (max-width: $breakpoint) {
+  .c-row {
+    grid-gap: inherit;
+  }
+  @each $col in $cols {
+    .c-col-#{$col}--md {
+      grid-column-end: span 12;
+    }
   }
 }
