--- a/src/styles/generic.scss
+++ b/src/styles/generic.scss
@@ -1,3 +1,5 @@
+@import '../../node_modules/inter-ui/inter.css';
+
 html * {
   box-sizing: border-box;
 }
@@ -5,9 +7,7 @@ html * {
 body {
   margin: 0;
   padding: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: 'Inter var','Helvetica Neue Light','Helvetica Neue','Helvetica','Arial','sans-serif';
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
